k8s/cadastro-k8s/cadastro.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  annotations:
    instrumentation.opentelemetry.io/inject-dotnet: "true"
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      serviceAccountName: catalogo-service-account
      imagePullSecrets:
        - name: ghcr-secret        
      containers:
        - name: catalogo-api
          image: ghcr.io/patrickpk4/projeto-cadastro-com-pipeline/catalogo-api:IMAGE_TAG
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "70m"
          ports:
            - containerPort: 8080
              name: http
            - containerPort: 443
              name: https
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /read
              port: 8080
              scheme: HTTP
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
              scheme: HTTP
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 5
      affinity:
        podAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 20
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - mongodb
                topologyKey: kubernetes.io/hostname
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 10
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - api
                topologyKey: kubernetes.io/hostname
