k8s/cadastro-k8s/service-cadastro.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    app: api
  ports:
    - port: 80
      targetPort: 8080
      name: http
  type: LoadBalancer
